[workspace]
members = ["crates/specs", "crates/zkwasm", "crates/cli", "crates/host"]
exclude = ["third-party/wasmi", "crates/playground"]
resolver = "2"

[workspace.dependencies]
anyhow = { version = "1.0.68", features = ["backtrace"] }
bincode = "1.3.3"
cfg-if = "1.0.0"
halo2_proofs = { git = "https://github.com/DelphinusLab/halo2-gpu-specific.git", default-features = true }
num-traits = "0.2.15"
parity-wasm = { version = "0.42.0", features = ["sign_ext"] }
rayon = "1.8.0"
regex = "1.10.2"
static_assertions = "1.1.0"
wasmi = { path = "third-party/wasmi" }
zkwasm-host-circuits = { git = "https://github.com/DelphinusLab/zkWasm-host-circuits.git", branch="host-op-1.8" }
circuits-batcher = { git = "https://github.com/DelphinusLab/continuation-batcher.git", tag="on-prove-pairing-2.4" }
poseidon = { git = "https://github.com/DelphinusLab/poseidon" }

[profile.dev]
opt-level = 3
