[package]
name = "specs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2_proofs = { path = "../../halo2/halo2_proofs", default-features = true }
lazy_static = "1.4.0"
num-bigint = { version = "0.4", features = ["rand"] }
parity-wasm = { version = "0.42.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.24.1"
strum_macros = "0.24.1"

[features]
default = []
cuda = ["halo2_proofs/cuda"]
