[package]
name = "delphinus-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-std = { version = "0.3.0", features = ["print-trace"] }
env_logger = "0.9.3"
log = "0.4.17"
md5 = "0.7.0"
notify = "6.0.1"
sha2 = "0.10.6"
specs = { path = "../specs" }
clap = { version = "3.2.22", features = ["derive","cargo"] }
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
delphinus-zkwasm = { path = "../zkwasm" }
delphinus-host = { path = "../host" }
anyhow.workspace = true
halo2aggregator-s.workspace = true
halo2_proofs.workspace = true
wasmi.workspace = true
circuits-batcher = { git = "https://github.com/DelphinusLab/continuation-batcher.git" }

[features]
default = []
cuda = ["delphinus-zkwasm/cuda"]
uniform-circuit = ["delphinus-zkwasm/uniform-circuit"]