[package]
name = "key_tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pairing_bn256 = { git = "https://github.com/lanbones/pairing.git" }
anyhow = "1.0.81"
pairing_ce = "0.24.2"
chksum-md5 = "0.0.0"
byteorder = "1.5.0"
num-traits = "0.2.19"
num-bigint = "0.4.6"