[package]
name = "playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
delphinus-zkwasm = { path = "../zkwasm" }
pairing_bn256 = { git = "https://github.com/lanbones/pairing.git" }
anyhow.workspace = true
wasmi.workspace = true

[features]
default = []
checksum = ["delphinus-zkwasm/checksum"]
cuda = ["delphinus-zkwasm/cuda"]
