[package]
name = "playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.68", features = ["backtrace"] }
delphinus-zkwasm = { path = "../zkwasm" }
pairing_bn256 = { git = "https://github.com/lanbones/pairing.git" }

[features]
default = []
cuda = ["delphinus-zkwasm/cuda"]

[patch."https://github.com/DelphinusLab/halo2-gpu-specific.git"]
halo2_proofs = { path = "../../../halo2-gpu-specific/halo2_proofs" }