[package]
name = "delphinus-zkwasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-std = { version = "0.3.0", features = ["print-trace"] }
bitvec = "1.0.1"
downcast-rs = "1.2.0"
hex = "0.4.3"
log = "0.4.17"
num-integer = "0.1"
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2.15"
wabt = "0.10.0"
lazy_static = "1.4.0"
rand = "0.8.4"
specs = { path = "../specs" }
strum = "0.24.1"
strum_macros = "0.24.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow.workspace = true
halo2aggregator-s.workspace = true
halo2_proofs.workspace = true
parity-wasm.workspace = true
wasmi.workspace = true

[dev-dependencies]
rusty-fork = "0.3.0"

[features]
default = []
cuda = ["halo2_proofs/cuda", "specs/cuda"]
continuation = ["specs/continuation"]