[package]
name = "delphinus-zkwasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-std = { version = "0.4.0", features = ["parallel"] }
bitvec = "1.0.1"
downcast-rs = "1.2.0"
hex = "0.4.3"
log = "0.4.17"
num-integer = "0.1"
num-bigint = { version = "0.4", features = ["rand"] }
wabt = "0.10.0"
lazy_static = "1.4.0"
rand = "0.8.4"
specs = { path = "../specs" }
strum = "0.24.1"
strum_macros = "0.24.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.58"
ff = "0.12"
sha2 = "0.10.6"
anyhow.workspace = true
cfg-if.workspace = true
halo2_proofs.workspace = true
num-traits.workspace = true
parity-wasm.workspace = true
rayon.workspace = true
regex.workspace = true
wasmi.workspace = true

# TODO put the host circuits into features

zkwasm-host-circuits.workspace = true

[dev-dependencies]
rusty-fork = "0.3.0"

[features]
default = []
profile = ["ark-std/print-trace", "halo2_proofs/profile"]
cuda = ["halo2_proofs/cuda", "specs/cuda"]
uniform-circuit = []
continuation = ["uniform-circuit", "specs/continuation"]
